# terminal

./: .gitignore  .gitmodules  compile_commands.json  meson.build  shell.nix
src/: cglm_test.c  glad.c  log.c  log.h  main.c  mat4.c  meson.build  shader.c  shader.h  test.c
src/render/: font_gl.c  meson.build  opengl.h  render.h  render_gl.c  render_gl.h  render_test.c  shader.c  shader.h
src/render/font/: fconfig.c  fconfig.h  font.h  font_ft.c  meson.build
src/shaders/: 1.vert  2.vert  v3f-t2f-c4f.vert
src/util/: list.c  list.h  meson.build
test/: meson.build  util_test.c
